--- a/css/app.css
+++ b/css/app.css
@@ -19,3 +19,22 @@
     color: white !important;
     text-color: white !important;
 }
+
+#MainMenu {
+    visibility: hidden;
+}
+
+footer {
+    visibility: hidden;
+}
+
+header {
+    visibility: hidden;
+}        
+
+.st-emotion-cache-t1wise {
+    width: 100%;
+    padding: 0rem 1rem 10rem;
+    max-width: initial;
+    min-width: auto;
+}            
